# caddy-cloudflare

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: build.yml
caddy/: Dockerfile  entrypoint.sh
cf-failover/: Dockerfile  README.md  package.json
cf-failover/src/: index.js  logic.js
cf-failover/test/: failover.test.js
cf-hostname-reconciler/: .env.example  Dockerfile  README.md  package.json  pyproject.toml
cf-hostname-reconciler/src/: cloudflare.js  config.js  diff.js  docker.js  health.js  index.js  logging.js  reconciler.js  safety.js  zones.js
cf-hostname-reconciler/src/reconciler/: __init__.py  cloudflare.py  config.py  diff.py  docker_state.py  health.py  logging_setup.py  main.py  safety.py  zones.py
cf-hostname-reconciler/test/: diff_safety.test.js  labels.test.js  reconciler.test.js
cf-hostname-reconciler/tests/: test_diff_and_safety.py  test_labels.py  test_reconciler.py
cf-hostname-reconciler/tools/: coverage_summary.py
