[project]
name = "cf-hostname-reconciler"
version = "0.1.0"
description = "Sync Cloudflare for SaaS custom hostnames with caddy-docker-proxy labels"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
cf-hostname-reconciler = "reconciler.main:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
